header z-index fix

--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,7 +1,9 @@
 @import 'partials';
-
+ 
 .navbar{
     background-color: var(--bg_secondary);
+    position: relative;
+    z-index: 9; 
     @media ($sm-991 ){
         position: fixed;
         top: 0;
@@ -140,7 +142,12 @@
             align-items: center;
             border-radius: 5px;
             line-height: 1;
-            
+            color: #080619;
+            &:active{
+                background-color: transparent;
+                color: #080619;
+
+            }
             @media ($sm-1441){
                 padding-left: 12px;
                 padding-right: 12px;
@@ -156,6 +163,10 @@
             @media ($sm-991){
                 font-size: 12px;
                 color: #EEEEEE;
+                &:active{
+                    background-color: transparent;
+                    color: #EEEEEE;
+                }
             }
             &:before{
                 width: 10px;
